--- a/docker-testing/Dockerfile
+++ b/docker-testing/Dockerfile
@@ -8,3 +8,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 CMD [ "python", "-m", "flask", "run", "--host=0.0.0.0" ]
+EXPOSE 5000
