--- a/kubernetes/loss.yml
+++ b/kubernetes/loss.yml
@@ -18,6 +18,29 @@ spec:
               image: is-this-loss
               imagePullPolicy: Never
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+   name: loss-test-demo
+   namespace: default
+spec:
+   replicas: 1
+   selector:
+      matchLabels:
+         type: loss-qryer
+   template:
+      metadata:
+         labels:
+            type: loss-qryer
+      spec:
+         containers:
+            - name: loss-tester
+              image: loss-tester
+              imagePullPolicy: Never
+              env:
+                - name: PYTHONUNBUFFERED
+                  value: "1"
+---
 apiVersion: v1
 kind: Service
 metadata:
